Bug fixes: quotes and emoji work with bbcode; fixed spacing issues; forums display who posted last

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -73,6 +73,14 @@ body {
 }
 
 td img {
-    max-width:100%;
-    height:auto;
+  max-width:100%;
+  height:auto;
+}
+
+.quote {
+  background-color: #f4f4f4;
+  font-size: 10px;
+  margin-left: 2em;
+  margin-right: 2em;
+  padding: 5px;
 }
